--- a/App/Podfile
+++ b/App/Podfile
@@ -1,28 +1,12 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '13.0'
 
 workspace 'Somari.xcworkspace'
 
-target 'Somari' do
-  project 'Somari/Somari.xcodeproj'
-  # Comment the next line if you don't want to use dynamic frameworks
-  use_frameworks!
+install! 'cocoapods', generate_multiple_pod_projects: true, incremental_installation: true, integrate_targets: false
 
-  # Pods for Somari
-  pod 'Firebase/Analytics'
-  pod 'Firebase/Auth'
-  pod 'Firebase/Firestore'
-
-  target 'SomariTests' do
-    inherit! :search_paths
-    # Pods for testing
-  end
-
-  target 'SomariUITests' do
-    # Pods for testing
-  end
-
-end
+inhibit_all_warnings!
+use_modular_headers!
 
 target 'SomariCore' do
   project 'SomariCore/SomariCore.xcodeproj'
