--- a/App/Login/Login.xcodeproj/xcshareddata/xcschemes/Login.xcscheme
+++ b/App/Login/Login.xcodeproj/xcshareddata/xcschemes/Login.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "021B970B2351DBE900E59F3F"
-               BuildableName = "SomariKit.framework"
-               BlueprintName = "SomariKit"
-               ReferencedContainer = "container:SomariKit.xcodeproj">
+               BlueprintIdentifier = "021B977B2351EC2200E59F3F"
+               BuildableName = "Login.framework"
+               BlueprintName = "Login"
+               ReferencedContainer = "container:Login.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -28,10 +28,10 @@
             buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "021B97142351DBE900E59F3F"
-               BuildableName = "SomariKitTests.xctest"
-               BlueprintName = "SomariKitTests"
-               ReferencedContainer = "container:SomariKit.xcodeproj">
+               BlueprintIdentifier = "021B97842351EC2200E59F3F"
+               BuildableName = "LoginTests.xctest"
+               BlueprintName = "LoginTests"
+               ReferencedContainer = "container:Login.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -46,10 +46,10 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "021B97142351DBE900E59F3F"
-               BuildableName = "SomariKitTests.xctest"
-               BlueprintName = "SomariKitTests"
-               ReferencedContainer = "container:SomariKit.xcodeproj">
+               BlueprintIdentifier = "021B97842351EC2200E59F3F"
+               BuildableName = "LoginTests.xctest"
+               BlueprintName = "LoginTests"
+               ReferencedContainer = "container:Login.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -74,10 +74,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "021B970B2351DBE900E59F3F"
-            BuildableName = "SomariKit.framework"
-            BlueprintName = "SomariKit"
-            ReferencedContainer = "container:SomariKit.xcodeproj">
+            BlueprintIdentifier = "021B977B2351EC2200E59F3F"
+            BuildableName = "Login.framework"
+            BlueprintName = "Login"
+            ReferencedContainer = "container:Login.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
