--- a/App/SomariFoundation/SomariFoundation.xcodeproj/xcshareddata/xcschemes/SomariFoundation.xcscheme
+++ b/App/SomariFoundation/SomariFoundation.xcodeproj/xcshareddata/xcschemes/SomariFoundation.xcscheme
@@ -14,24 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "021B970B2351DBE900E59F3F"
-               BuildableName = "SomariKit.framework"
-               BlueprintName = "SomariKit"
-               ReferencedContainer = "container:SomariKit.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "021B97142351DBE900E59F3F"
-               BuildableName = "SomariKitTests.xctest"
-               BlueprintName = "SomariKitTests"
-               ReferencedContainer = "container:SomariKit.xcodeproj">
+               BlueprintIdentifier = "02EAB8622350B5A800130DB2"
+               BuildableName = "SomariFoundation.framework"
+               BlueprintName = "SomariFoundation"
+               ReferencedContainer = "container:SomariFoundation.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -46,10 +32,10 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "021B97142351DBE900E59F3F"
-               BuildableName = "SomariKitTests.xctest"
-               BlueprintName = "SomariKitTests"
-               ReferencedContainer = "container:SomariKit.xcodeproj">
+               BlueprintIdentifier = "02EAB86B2350B5A800130DB2"
+               BuildableName = "SomariFoundationTests.xctest"
+               BlueprintName = "SomariFoundationTests"
+               ReferencedContainer = "container:SomariFoundation.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -74,10 +60,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "021B970B2351DBE900E59F3F"
-            BuildableName = "SomariKit.framework"
-            BlueprintName = "SomariKit"
-            ReferencedContainer = "container:SomariKit.xcodeproj">
+            BlueprintIdentifier = "02EAB8622350B5A800130DB2"
+            BuildableName = "SomariFoundation.framework"
+            BlueprintName = "SomariFoundation"
+            ReferencedContainer = "container:SomariFoundation.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
