Update: include FirebaseFirestoreSwift in Framework Search Paths

--- a/App/Somari/Somari/build.xcconfig
+++ b/App/Somari/Somari/build.xcconfig
@@ -12,7 +12,7 @@
 PODS_ROOT = $(SRCROOT)/../Pods
 PODS_CONFIGURATION_BUILD_DIR = $(PODS_ROOT)/Build/Release$(EFFECTIVE_PLATFORM_NAME)
 
-FRAMEWORK_SEARCH_PATHS = $(inherited) "$(PODS_CONFIGURATION_BUILD_DIR)/FirebaseCore" "$(PODS_ROOT)/FirebaseAnalytics/Frameworks" "$(PODS_CONFIGURATION_BUILD_DIR)/FirebaseAuth" "$(PODS_CONFIGURATION_BUILD_DIR)/FirebaseFirestore" "$(PODS_CONFIGURATION_BUILD_DIR)/FirebaseInstanceID"
+FRAMEWORK_SEARCH_PATHS = $(inherited) "$(PODS_CONFIGURATION_BUILD_DIR)/FirebaseCore" "$(PODS_ROOT)/FirebaseAnalytics/Frameworks" "$(PODS_CONFIGURATION_BUILD_DIR)/FirebaseAuth" "$(PODS_CONFIGURATION_BUILD_DIR)/FirebaseFirestore" "${PODS_CONFIGURATION_BUILD_DIR}/FirebaseFirestoreSwift" "$(PODS_CONFIGURATION_BUILD_DIR)/FirebaseInstanceID"
 HEADER_SEARCH_PATHS = $(inherited) "$(PODS_ROOT)/Headers/Public" "$(PODS_ROOT)/Firebase/CoreOnly/Sources"
 //LIBRARY_SEARCH_PATHS = ""
 OTHER_LDFLAGS = -ObjC
