--- a/App/Somari/Somari.xcodeproj/xcshareddata/xcschemes/Somari.xcscheme
+++ b/App/Somari/Somari.xcodeproj/xcshareddata/xcschemes/Somari.xcscheme
@@ -98,6 +98,20 @@
             ReferencedContainer = "container:Somari.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-com.apple.CoreData.SQLDebug 1"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-com.apple.CoreData.ConcurrencyDebug 1&#10;-com.apple.CoreData.ConcurrencyDebug 1&#10;-com.apple.CoreData.ConcurrencyDebug 1"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-com.apple.CoreData.MigrationDebug 1"
+            isEnabled = "NO">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
