--- a/App/Podfile
+++ b/App/Podfile
@@ -18,6 +18,9 @@ target 'SomariCore' do
   pod 'Firebase/Firestore'
   pod 'FirebaseFirestoreSwift', :git => 'https://github.com/firebase/firebase-ios-sdk.git', :branch => 'master'
 
+  pod 'Fabric'
+  pod 'Crashlytics'
+
   target 'SomariCoreTest' do
     inherit! :search_paths
   end
